# TU_Dresden_WHK

./: .project  Dockerfile  README.md  output  scone.py  script.sh  sqrt.cc
bashCommands/: C++.sh  C.sh  Cplusplus.sh  Fortran.sh  GO.sh  Java.sh  MrEnclave.sh  Nodejs.sh  Python.sh  R.sh  Rust.sh  SCONE_CAS.sh  SCONE_CLI.sh  SCONE_Compose.sh  SCONE_Curated_Images.sh  SCONE_Dockerfile.sh  SCONE_EE2EE.sh  SCONE_ENV.sh  SCONE_Fileshield.sh  SCONE_GENERATE_IMAGE.sh  SCONE_HOST.sh  SCONE_HOST_SETUP.sh  SCONE_SERVICE.sh  SCONE_STACK.sh  SCONE_SWARM.sh  SCONE_Swarm_Example.sh  SCONE_TUTORIAL.sh  SCONE_VOLUME.sh  SCONE_toolchain.sh  blender.sh  dapps.sh  dockerfileexample.sh  dockerinstall.sh  faq.sh  firstcontainer.sh  groupcacheUseCase.sh  hardwaremode.sh  hostexample.sh  iexec_install.sh  installation.sh  (+10 more)
bashOutput/: .Cplusplus.out.swp  C.out  Cplusplus.out  Fortran.out  GO.out  Java.out  MrEnclave.out  Nodejs.out  Python.out  R.out  Rust.out  SCONE_CAS.out  SCONE_CLI.out  SCONE_Compose.out  SCONE_Curated_Images.out  SCONE_Dockerfile.out  SCONE_EE2EE.out  SCONE_ENV.out  SCONE_Fileshield.out  SCONE_GENERATE_IMAGE.out  SCONE_HOST.out  SCONE_HOST_SETUP.out  SCONE_SERVICE.out  SCONE_STACK.out  SCONE_SWARM.out  SCONE_Swarm_Example.out  SCONE_TUTORIAL.out  SCONE_VOLUME.out  SCONE_toolchain.out  blender.out  dapps.out  dockerfileexample.out  dockerinstall.out  faq.out  firstcontainer.out  groupcacheUseCase.out  hardwaremode.out  hostexample.out  (+12 more)
rustWork/prateek/hello_cargo/: Cargo.toml
rustWork/prateek/hello_cargo/src/: main.rs
rustWork/prateek/hello_cargo/src/book/: C++.md
(+160 files in other folders)
